--- a/tests/test_cases/2020/commands/7E0.0105.yaml
+++ b/tests/test_cases/2020/commands/7E0.0105.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
-    ECT: 25
-  response: '7E803410541'
+    ECT: 20
+  response: 7E80341053C
 - expected_values:
     ECT: 97
   response: '7E803410589'
