--- a/tests/test_cases/2020/commands/7C6.7CE.22B002.yaml
+++ b/tests/test_cases/2020/commands/7C6.7CE.22B002.yaml
@@ -46,6 +46,15 @@ test_cases:
     7CE2100309D00000000
     7CE228804AAAAAAAAAA
 - expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 13.67188
+    VELOSTER_FLI_VOL: 50
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 40707
+  response: |-
+    7CE100F62B002D00000
+    7CE210032AF00000000
+    7CE229F03AAAAAAAAAA
+- expected_values:
     VELOSTER_CLUSTER_VOLTAGE: 13.75
     VELOSTER_FLI_VOL: 63
     VELOSTER_ODO_KM: 0
