--- a/tests/test_cases/2020/commands/7E0.0111.yaml
+++ b/tests/test_cases/2020/commands/7E0.0111.yaml
@@ -10,6 +10,9 @@ test_cases:
     TP: 12.94118
   response: '7E803411121'
 - expected_values:
+    TP: 13.33333
+  response: '7E803411122'
+- expected_values:
     TP: 14.11765
   response: '7E803411124'
 - expected_values:
