--- a/tests/test_cases/2020/commands/7E0.0111.yaml
+++ b/tests/test_cases/2020/commands/7E0.0111.yaml
@@ -4,5 +4,5 @@ test_cases:
     TP: 11.76471
   response: 7E80341111E
 - expected_values:
-    TP: 40.39216
-  response: '7E803411167'
+    TP: 76.47059
+  response: 7E8034111C3
