--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -273,6 +273,23 @@ test_cases:
     7E828DF062730003040
     7E829660069605BA050
 - expected_values:
+    VELOSTER_TURBO_BOOST: -1.42225
+    VELOSTER_WG_DUTY: 39.81384
+    VELOSTER_WG_POSITION: 364.84321
+    VELOSTER_WG_SETPOINT: 58.44816
+    VELOSTER_WG_VOLTAGE: 4.04791
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F000000225C28
+    7E8225B287128CF010E
+    7E82329B12830166316
+    7E824A0000401701000
+    7E825000000B1000000
+    7E826DB44191C000000
+    7E827000000C067A032
+    7E828F6E97F25682340
+    7E82966E06A605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: -1.30199
     VELOSTER_WG_DUTY: 24.33814
     VELOSTER_WG_POSITION: 7.67834
@@ -935,6 +952,23 @@ test_cases:
     7E82700000020652065
     7E828DAD80400000040
     7E82966E069605BA050
+- expected_values:
+    VELOSTER_TURBO_BOOST: 10.74288
+    VELOSTER_WG_DUTY: 63.86816
+    VELOSTER_WG_POSITION: 397.79049
+    VELOSTER_WG_SETPOINT: 22.3331
+    VELOSTER_WG_VOLTAGE: 4.00397
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F00008049E057
+    7E822DF570E561D3C2C
+    7E8236D756ECB370F37
+    7E824BB64FF5E241F00
+    7E8250000006A010000
+    7E8269B68534A000100
+    7E827000000FE668051
+    7E828C0FE950E4B0E40
+    7E82966E06A605BA050
 - expected_values:
     VELOSTER_TURBO_BOOST: 11.49328
     VELOSTER_WG_DUTY: 64.49683
