--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -273,21 +273,21 @@ test_cases:
     7E828DF062730003040
     7E829660069605BA050
 - expected_values:
-    VELOSTER_TURBO_BOOST: -1.42225
-    VELOSTER_WG_DUTY: 39.81384
-    VELOSTER_WG_POSITION: 364.84321
-    VELOSTER_WG_SETPOINT: 58.44816
-    VELOSTER_WG_VOLTAGE: 4.04791
+    VELOSTER_TURBO_BOOST: -1.43307
+    VELOSTER_WG_DUTY: 79.17906
+    VELOSTER_WG_POSITION: 341.34432
+    VELOSTER_WG_SETPOINT: 0
+    VELOSTER_WG_VOLTAGE: 3.96979
   response: |-
     7E8104562E021FE9FCE
-    7E8217F000000225C28
-    7E8225B287128CF010E
-    7E82329B12830166316
-    7E824A0000401701000
-    7E825000000B1000000
-    7E826DB44191C000000
-    7E827000000C067A032
-    7E828F6E97F25682340
+    7E8217F000000225328
+    7E8224828C235FA0A7F
+    7E823334426B2168B1E
+    7E8243C00DC05AD1200
+    7E82500000079000000
+    7E8265B477C27000000
+    7E8270000009C65A065
+    7E82859DA7500000040
     7E82966E06A605BA050
 - expected_values:
     VELOSTER_TURBO_BOOST: -1.30199
@@ -1037,3 +1037,20 @@ test_cases:
     7E827000000C063401F
     7E828B4013F30003040
     7E829662069605BA050
+- expected_values:
+    VELOSTER_TURBO_BOOST: -1.59181
+    VELOSTER_WG_DUTY: 76.56367
+    VELOSTER_WG_POSITION: 1.16579
+    VELOSTER_WG_SETPOINT: 0
+    VELOSTER_WG_VOLTAGE: 3.8819
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F0000E021CF27
+    7E822D1278C27000034
+    7E8232D342D66236623
+    7E82400000000001000
+    7E82500000000000000
+    7E826D227D227000000
+    7E82700000000636062
+    7E8280000BF00000040
+    7E82966E06A605BA050
