--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -953,6 +953,23 @@ test_cases:
     7E828DAD80400000040
     7E82966E069605BA050
 - expected_values:
+    VELOSTER_TURBO_BOOST: 7.71002
+    VELOSTER_WG_DUTY: 74.14054
+    VELOSTER_WG_POSITION: 376.51942
+    VELOSTER_WG_SETPOINT: 5.61532
+    VELOSTER_WG_VOLTAGE: 3.93561
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F00008040064B
+    7E822E44A7C510B255A
+    7E823574D529F309B33
+    7E8247A1F91260C1C00
+    7E8250000006A010000
+    7E826FE5FC643000000
+    7E8270000008064C05E
+    7E828E6F0F803980240
+    7E82966E06A605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: 10.74288
     VELOSTER_WG_DUTY: 63.86816
     VELOSTER_WG_POSITION: 397.79049
