--- a/tests/test_cases/2020/commands/7E0.0144.yaml
+++ b/tests/test_cases/2020/commands/7E0.0144.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.76954
+  response: '7E80441446280'
+- expected_values:
     EQ_RAT: 0.78907
   response: '7E80441446500'
 - expected_values:
