--- a/tests/test_cases/2020/commands/7C6.7CE.22B002.yaml
+++ b/tests/test_cases/2020/commands/7C6.7CE.22B002.yaml
@@ -10,6 +10,15 @@ test_cases:
     7CE210007A000000000
     7CE228AA7AAAAAAAAAA
 - expected_values:
+    VELOSTER_CLUSTER_VOLTAGE: 13.51562
+    VELOSTER_FLI_VOL: 7
+    VELOSTER_ODO_KM: 0
+    VELOSTER_ODO_MI: 41706
+  response: |-
+    7CE100F62B002D00000
+    7CE210007AD00000000
+    7CE22A2EAAAAAAAAAAA
+- expected_values:
     VELOSTER_CLUSTER_VOLTAGE: 13.67188
     VELOSTER_FLI_VOL: 7
     VELOSTER_ODO_KM: 0
