--- a/tests/test_cases/2020/commands/7E0.0134.yaml
+++ b/tests/test_cases/2020/commands/7E0.0134.yaml
@@ -17,6 +17,10 @@ test_cases:
     O2S11_CURRENT: 0
   response: '7E806413480108000'
 - expected_values:
+    LAMBDA11_CURRENT: 1.96872
+    O2S11_CURRENT: 1.71875
+  response: 7E8064134FBFF81B8
+- expected_values:
     LAMBDA11_CURRENT: 1.99
     O2S11_CURRENT: 1.75391
   response: 7E8064134FFFF81C1
