--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
@@ -84,6 +84,22 @@ test_cases:
     VELOSTER_TPMS_ALERT_FL: 0
     VELOSTER_TPMS_ALERT_FR: 1
     VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 32.8
+    VELOSTER_TPMS_PRESS_FR: 12.4
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 64
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
+  response: |-
+    7A8101762C00BFFFF00
+    7A82100A4400100A43E
+    7A8220100A33C0100A1
+    7A8233B0100AAAAAAAA
+- expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
     VELOSTER_TPMS_PRESS_FL: 33
     VELOSTER_TPMS_PRESS_FR: 12.4
     VELOSTER_TPMS_PRESS_RL: 0
