--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -1,6 +1,23 @@
 command_id: 7E0.7E8.22E021
 test_cases:
 - expected_values:
+    VELOSTER_TURBO_BOOST: -2.31816
+    VELOSTER_WG_DUTY: 25.76638
+    VELOSTER_WG_POSITION: 20.98421
+    VELOSTER_WG_SETPOINT: 73.43862
+    VELOSTER_WG_VOLTAGE: 3.8233
+  response: |-
+    7E8104562E021FE9FCE
+    7E8217F0000001F7324
+    7E8227224521C00008C
+    7E82326652911177A15
+    7E8244D000000001000
+    7E82500000079000000
+    7E826F7418B10000000
+    7E8270000007861E020
+    7E828FB0D6E2F003040
+    7E82966E06A605BA050
+- expected_values:
     VELOSTER_TURBO_BOOST: -2.31696
     VELOSTER_WG_DUTY: 24.4419
     VELOSTER_WG_POSITION: 11.01091
