--- a/tests/test_cases/2020/commands/7E0.0131.yaml
+++ b/tests/test_cases/2020/commands/7E0.0131.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0131
 test_cases:
 - expected_values:
-    CLR_DIST: 928
-  response: 7E804413103A0
+    CLR_DIST: 1
+  response: '7E80441310001'
 - expected_values:
     CLR_DIST: 2047
   response: 7E804413107FF
